--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,6 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^0.8.0-rc.4"
+    "polymer": "Polymer/polymer#^1.0.0"
   }
 }
